# compiler-ui

./: .gitignore  .prettierignore  ARCHITECTURE.md  META_DESCRIPTIONS.md  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
src/: app.css  app.html
src/lib/compiler/: compiler.ts  types.ts  wasm-loader.ts
src/lib/components/: ASTNode.svelte  ASTTree.svelte  AssemblyView.svelte  Console.svelte  Divider.svelte  DocsPanel.svelte  Editor.svelte  ErrorPanel.svelte  OutputPanel.svelte  TimelinePanel.svelte  Toolbar.svelte  VariablePanel.svelte
src/lib/examples/: programs.ts
src/lib/interpreter/: builtins.ts  environment.ts  interpreter.ts  snapshot.ts  values.ts
src/lib/utils/: declarations.ts  error-commentary.ts  format.ts  highlight.ts  lifetimes.ts
src/routes/: +layout.svelte  +page.svelte
static/wasm/: chocopy_wasm.js  chocopy_wasm_bg.wasm
wasm/: Cargo.toml
wasm/pkg/: chocopy_wasm.d.ts  chocopy_wasm_bg.wasm  chocopy_wasm_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
