[package]
name = "chocopy-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
chocopy = { path = "../../typed-python-compiler/chocopy", default-features = false }

[profile.release]
opt-level = "s"
lto = true
